Fixed gap

--- a/Frontend/src/pages/Dashboard/Dashboard.module.css
+++ b/Frontend/src/pages/Dashboard/Dashboard.module.css
@@ -27,4 +27,7 @@
     .statsContainer {
         padding: 0.5rem 1rem 1rem 1rem;
     }
+    .row {
+        gap: 0;
+    }
 }
